--- a/style.css
+++ b/style.css
@@ -305,6 +305,10 @@ ul {
   .container {
     max-width: 768px;
   }
+
+  .md-text-left {
+    text-align: left;
+  }
 }
 
 /* for large screen lg (1024 px) */
@@ -334,6 +338,10 @@ ul {
 
   .active {
     max-height: 100% !important;
+  }
+
+  .lg-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg-cols-3 {
