--- a/style.css
+++ b/style.css
@@ -312,6 +312,10 @@ ul {
   .md-text-left {
     text-align: left;
   }
+
+  .md-mx-initial {
+    margin: initial;
+  }
 }
 
 /* for large screen lg (1024 px) */
@@ -461,7 +465,7 @@ ul {
   background: var(--bg-image1) no-repeat;
   background-size: cover;
   border-radius: 8px;
-  filter: blur(1px);
+  filter: blur(.5px);
 }
 
 #site-main .social-area .grid-images .item-two {
@@ -473,7 +477,7 @@ ul {
   background: var(--bg-image2) no-repeat;
   background-size: cover;
   border-radius: 8px;
-  filter: blur(1px);
+  filter: blur(.5px);
 }
 
 #site-main .social-area .grid-images .item-three {
@@ -481,12 +485,41 @@ ul {
   background: var(--bg-image3) no-repeat;
   background-size: cover;
   border-radius: 8px;
-  filter: blur(1px);
+  filter: blur(.5px);
 }
 
 
-/*------  Aegncy Arear Style ------*/
+/*------  Skills Arear Style ------*/
 
+#site-main .skills-area {
+  padding: 7em 0;
+}
+
+#site-main .skills-area .grid-one p {
+  width: 80%;
+}
+
+#site-main .skills-area .skills-box {
+  display: flex;
+  justify-content: center;
+  margin: 2em 0;
+  padding: 10px;
+
+}
+
+#site-main .skills-area .skills-box .grid {
+  display: grid;
+  grid-gap: 2px;
+  border-radius: 20px;
+  background-color: var(--text-light);
+  box-shadow: var(--box-sahdow);
+}
+
+#site-main .skills-area .skills-box .grid>div {
+  background-color: vwhite;
+  padding: 2em 2.5em;
+  text-align: center;
+}
 
 /*------  Aegncy Arear Style ------*/
 
