--- a/style.css
+++ b/style.css
@@ -335,6 +335,10 @@ tag::before {
     border-radius: 8px;
     filter: blur(.5px);
   }
+
+  #greeting p {
+    color: var(--text-dark);
+  }
 }
 
 /* for large screen sm (640 px) */
@@ -358,6 +362,10 @@ tag::before {
     background-size: cover;
     border-radius: 8px;
     filter: blur(.5px);
+  }
+
+  #greeting p {
+    color: var(--text-dark);
   }
 }
 
@@ -386,6 +394,10 @@ tag::before {
     background-size: cover;
     border-radius: 8px;
     filter: blur(.5px);
+  }
+
+  #greeting p {
+    color: var(--text-gray);
   }
 }
 
@@ -425,6 +437,10 @@ tag::before {
   .lg-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+
+     #greeting p {
+       color: var(--text-gray);
+     }
 }
 
 
