media queries ready

--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ tag::before {
 
   #greeting p {
     color: var(--text-dark);
+    text-align: center;
   }
 }
 
@@ -366,6 +367,7 @@ tag::before {
 
   #greeting p {
     color: var(--text-dark);
+    text-align: center;
   }
 }
 
@@ -398,6 +400,7 @@ tag::before {
 
   #greeting p {
     color: var(--text-gray);
+    text-align: left;
   }
 }
 
@@ -438,9 +441,10 @@ tag::before {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-     #greeting p {
-       color: var(--text-gray);
-     }
+  #greeting p {
+    color: var(--text-gray);
+    text-align: left;
+  }
 }
 
 
