--- a/style.css
+++ b/style.css
@@ -30,6 +30,17 @@
   --bg-image3: url('./assets/bgsocial6.jpeg');
   --logo: url('./assets/Logoterapia.svg');
 
+  /*========== Font and typography ==========*/
+  --body-font: 'IBM Plex Sans Condensed', sans-serif;
+  /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
+  --big-font-size: 2rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1.125rem;
+  --normal-font-size: .938rem;
+  --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
+
 
   /*========== Margenes Bottom ==========*/
   /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
@@ -427,6 +438,10 @@ tag::before {
     margin: initial;
   }
 
+  .md-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   #site-main .social-area .grid-images .item-one {
     background: var(--text-gray);
     grid-column-start: 1 !important;
@@ -486,6 +501,10 @@ tag::before {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   #greeting p {
     color: var(--text-gray);
     text-align: left;
@@ -493,11 +512,11 @@ tag::before {
 }
 
 
-/* for large screen lg (1280 px) */
+/* for large screen lg (1400 px) */
 
-@media (min-width: 1280px) {
+@media (min-width: 1400px) {
   .container {
-    max-width: 1280px;
+    max-width: 1400px;
   }
 
   .container__contact {
@@ -656,7 +675,7 @@ tag::before {
 }
 
 #site-main .skills-area .skills-box .grid>div {
-  background-color: vwhite;
+  background-color: white;
   padding: 2em 2.5em;
   text-align: center;
 }
@@ -8792,6 +8811,7 @@ tag::before {
 }
 
 #site-main .article-area .card article {
+  background: white;
   border-radius: 10px;
 }
 
@@ -8824,7 +8844,7 @@ tag::before {
 
 .contact__subtitle {
   font-size: var(--small-font-size);
-  color: var(--text-color-light);
+  color: var(--text-gray);
 }
 
 .contact__content {
@@ -8898,7 +8918,39 @@ tag::before {
 }
 
 
-/*------  Articles Arear Style ------*/
+/*------  Footer Style ------*/
+
+#footer {
+  border-top: 2px solid var(--text-light);
+  margin-top: 6em;
+}
+
+#footer .grid {
+  column-gap: 3em;
+  padding: 6em 0;
+  border-bottom: 2px solid var(--text-light);
+}
+
+#footer .grid input.suscribe-text {
+  border: none;
+  background-color: var(--text-light);
+  padding: 1em;
+  font-size: 1em;
+  color: var(--text-dark);
+}
+
+#footer .grid input.suscribe-text:focus {
+  outline: none;
+  border: none;
+}
+
+.btn-go {
+  background: var(--text-light);
+  font-family: var(--font-family);
+  font-size: 1em;
+  padding: 0 2em;
+
+}
 
 
 /*------  Articles Arear Style ------*/
