--- a/style.css
+++ b/style.css
@@ -386,13 +386,13 @@ tag::before {
   }
 }
 
-@media (max-width: 766px) {
+@media (max-width: 900px) {
   .container {
-    max-width: 766px;
+    max-width: 900px;
   }
 
   .banner-area .banner-title {
-    height: 75vh;
+    height: 75vh !important;
     padding-top: 16rem;
   }
 
@@ -401,13 +401,28 @@ tag::before {
   }
 }
 
-@media (max-width: 912px) {
+@media (min-width: 911px) {
   .container {
-    max-width: 912px;
+    min-width: 911px;
   }
 
   .banner-area .banner-title {
-    height: 75vh;
+    height: 75vh !important;
+    padding-top: 16rem;
+  }
+
+  #go {
+    justify-content: center;
+  }
+}
+
+@media (min-width: 912px) {
+  .container {
+    min-width: 912px;
+  }
+
+  .banner-area .banner-title {
+    height: 55vh !important;
     padding-top: 16rem;
   }
 }
